--- a/style.css
+++ b/style.css
@@ -1,24 +1,66 @@
+/* Ustawienia podstawowe */
+
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	font-family: 'Roboto', sans-serif;
+}
+
 body {
-	font-family: Arial, sans-serif;
-	background-color: #f2f2f2;
+	background-color: #0a0a0a;
+	color: #fff;
 }
 
 header {
-	background-color: #333;
-	color: #fff;
+	background-color: #1a1a1a;
 	padding: 20px;
 }
 
 nav ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
+	list-style-type: none;
 	display: flex;
+	justify-content: flex-end;
 }
 
-nav ul li {
-	margin-right: 20px;
+nav li {
+	margin: 0 10px;
 }
 
-nav ul li:last-child {
-	margin-right: 
+nav a {
+	text-decoration: none;
+	color: #fff;
+	font-size: 18px;
+}
+
+main {
+	padding: 20px;
+}
+
+.hero {
+	background-image: url('hero.jpg');
+	background-size: cover;
+	background-position: center;
+	height: 400px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+}
+
+.hero h1 {
+	font-size: 50px;
+	margin-bottom: 20px;
+}
+
+.hero p {
+	font-size: 24px;
+	margin-bottom: 40px;
+}
+
+.button {
+	background-color: #f72585;
+	color: #fff;
+	padding: 10px 20px;
+	border: none;
