--- a/style.css
+++ b/style.css
@@ -1,66 +1,73 @@
-/* Ustawienia podstawowe */
-
-* {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-	font-family: 'Roboto', sans-serif;
-}
-
 body {
-	background-color: #0a0a0a;
-	color: #fff;
+  background-color: black;
+  color: white;
+  font-family: 'Roboto', sans-serif;
 }
 
 header {
-	background-color: #1a1a1a;
-	padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
 }
 
 nav ul {
-	list-style-type: none;
-	display: flex;
-	justify-content: flex-end;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 nav li {
-	margin: 0 10px;
+  margin-right: 20px;
 }
 
-nav a {
-	text-decoration: none;
-	color: #fff;
-	font-size: 18px;
+main section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 50px;
 }
 
-main {
-	padding: 20px;
+main li {
+  background-color: #5B5B5B;
+  padding: 20px;
+  border-radius: 10px;
+  margin-bottom: 50px;
+  text-align: center;
+  width: 300px;
 }
 
-.hero {
-	background-image: url('hero.jpg');
-	background-size: cover;
-	background-position: center;
-	height: 400px;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
+main img {
+  width: 200px;
+  height: 200px;
+  margin-bottom: 20px;
+  border-radius: 50%;
 }
 
-.hero h1 {
-	font-size: 50px;
-	margin-bottom: 20px;
+main h3 {
+  margin-bottom: 10px;
 }
 
-.hero p {
-	font-size: 24px;
-	margin-bottom: 40px;
+main p {
+  margin-bottom: 20px;
 }
 
-.button {
-	background-color: #f72585;
-	color: #fff;
-	padding: 10px 20px;
-	border: none;
+main button {
+  background-color: #EA00D9;
+  border: none;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+main button:hover {
+  background-color: #D400C5;
+}
+
+footer {
+  background-color: #5B5B5B;
+  padding: 20px;
+  text-align: center;
+  margin-top:
